app accounts for maxxed out skills

--- a/client/index.html
+++ b/client/index.html
@@ -341,7 +341,7 @@
                                 <tr>
                                     <td>Agility</td>
                                     <td class="skill-modal-labels" data-name="agility">0</td>
-                                    <td>
+                                    <td id="agility-intensity-btns">
                                         <button name="agility" value="low"
                                             class="low-intensity-btn btn btn-sm">Low</button>
                                         <button name="agility" value="high"
@@ -352,7 +352,7 @@
                                 <tr>
                                     <td>Strength</td>
                                     <td class="skill-modal-labels" data-name="strength">0</td>
-                                    <td>
+                                    <td id="strength-intensity-btns">
                                         <button name="strength" value="low"
                                             class="low-intensity-btn btn btn-sm">Low</button>
                                         <button name="strength" value="high"
@@ -363,10 +363,43 @@
                                 <tr>
                                     <td>Intelligence</td>
                                     <td class="skill-modal-labels" data-name="intelligence">0</td>
-                                    <td>
+                                    <td id="intelligence-intensity-btns">
                                         <button name="intelligence" value="low"
                                             class="low-intensity-btn btn btn-sm">Low</button>
                                         <button name="intelligence" value="high"
+                                            class="high-intensity-btn btn btn-sm">High</button>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>Stealth</td>
+                                    <td class="skill-modal-labels" data-name="stealth">0</td>
+                                    <td id="stealth-intensity-btns">
+                                        <button name="stealth" value="low"
+                                            class="low-intensity-btn btn btn-sm">Low</button>
+                                        <button name="stealth" value="high"
+                                            class="high-intensity-btn btn btn-sm">High</button>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>Endurance</td>
+                                    <td class="skill-modal-labels" data-name="endurance">0</td>
+                                    <td id="endurance-intensity-btns">
+                                        <button name="endurance" value="low"
+                                            class="low-intensity-btn btn btn-sm">Low</button>
+                                        <button name="endurance" value="high"
+                                            class="high-intensity-btn btn btn-sm">High</button>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>Hunting</td>
+                                    <td class="skill-modal-labels" data-name="hunting">0</td>
+                                    <td id="hunting-intensity-btns">
+                                        <button name="hunting" value="low"
+                                            class="low-intensity-btn btn btn-sm">Low</button>
+                                        <button name="hunting" value="high"
                                             class="high-intensity-btn btn btn-sm">High</button>
                                     </td>
                                 </tr>
