--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,6 @@
         [type=radio]:checked+img {
             outline: 2px solid #141414;
         }
-
-        /* button:disabled {
-            background-color: white !important;
-            color: blue !important;
-        } */
     </style>
 </head>
 
@@ -106,19 +101,19 @@
                 <h2 class="mb-3 text-lg leading-none">THINGS TO DO</h2>
 
                 <div class="flex flex-col gap-3">
-                    <div class="tooltip tooltip-left tooltip-accent" data-tip="hello"><button id="play-minigame-btn"
+                    <div class="tooltip tooltip-accent" data-tip="Earn money by playing a mini-game"><button id="play-minigame-btn"
                             class="btn btn-sm btn-outline w-full">Play a Mini-Game</button></div>
 
-                    <div class="tooltip tooltip-accent" data-tip="hello"><button id="skill-training-btn"
+                    <div class="tooltip tooltip-accent" data-tip="Increase your pet's skills"><button id="skill-training-btn"
                             class="btn btn-outline btn-sm w-full">Skill Training</button></div>
 
-                    <div class="tooltip tooltip-accent" data-tip="Buy items for your pet!"><button
+                    <div class="tooltip tooltip-accent" data-tip="Buy items for your pet"><button
                             id="purchase-items-btn" class="btn btn-outline btn-sm w-full">Purchase Items</button></div>
 
-                    <div class="tooltip tooltip-accent" data-tip="hello"><button id="enter-contest-btn"
+                    <div class="tooltip tooltip-accent" data-tip="Enter a skill contest to earn money"><button id="enter-contest-btn"
                             class="btn btn-outline btn-sm w-full">Enter a Contest</button></div>
 
-                    <div class="tooltip tooltip-accent" data-tip="hello"><button id="start-adventure-btn"
+                    <div class="tooltip tooltip-accent" data-tip="Go on an adventure with your pet"><button id="start-adventure-btn"
                             class="btn btn-outline btn-sm w-full">Go on an Adventure</button></div>
                 </div>
             </div>
@@ -129,17 +124,8 @@
             <div class="col-span-7 md:col-span-4 lg:col-span-2 border border-neutral rounded p-7">
                 <h2 class="mb-3 text-lg leading-none">HISTORY</h2>
 
-                <ul class="text-sm overflow-y-scroll h-40 md:h-[208px] lg:h-[128px]">
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
-                    <li class="border-b py-1">lorem ipsum</li>
+                <ul id="history-container" class="text-sm overflow-y-scroll h-40 md:h-[208px] lg:h-[128px]">
+                    <!-- <li class="border-b py-1">lorem ipsum</li> -->
                 </ul>
             </div>
 
@@ -329,6 +315,7 @@
                         <p class="text-neutral my-4">Send your pet to training to improve their skills! Choose the skill
                             and
                             intensity below.</p>
+                        <p class="my-4 text-xs">Low intensity trains your pet slowly, high intensity speeds up skill development while also decreasing your pet's needs faster</p>
                         <table class="table">
                             <thead>
                                 <tr>
