money server code + other server code

--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
                         </div>
 
                         <p>Personality: <span id="pet-personality">Quiet</span></p>
-                        <p class="text-primary text-base">MONEY: <span id="money">100</span></p>
+                        <p class="text-primary text-base">MONEY: <span id="money-display">100</span></p>
                     </div>
                 </div>
 
