pet can die if health runs out

--- a/client/test.html
+++ b/client/test.html
@@ -10,52 +10,17 @@
 </head>
 
 <body class="font-mono">
-    <div class="modal-box">
-        <form method="dialog">
-            <button id="close-skill-training-btn"
-                class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
-        </form>
-        <h3 id="contest-title" class="font-bold text-lg">Enter a Contest</h3>
-
-        <div id="contest-container">
-            <div id="choose-a-contest">
-                <p class="text-neutral text-sm my-4">Choose a contest from the list below. You have a higher chance of winning if your pet has a high level in the listed skills!</p>
-
-                <div class="overflow-x-auto my-4">
-                    <table class="table">
-
-                      <thead>
-                        <tr>
-                          <th>Contest</th>
-                          <th>Skills</th>
-                          <th></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-
-                        <tr>
-                          <td>Agility Challenge</td>
-                          <td>Agility, Stealth</td>
-                          <td><button class="enter-contest-btns btn btn-sm" name="agilityChallenge" data-mainSkill="agility" data-otherSkill="stealth">Enter</button></td>
-                        </tr>
-
-                        <tr>
-                          <td>Strength Showdown</td>
-                          <td>Strength, Endurance</td>
-                          <td><button class="enter-contest-btns btn btn-sm" name="strengthShowdown" data-mainSkill="strength" data-otherSkill="endurance">Enter</button></td>
-                        </tr>
-
-                        <tr>
-                          <td>Mind Maze</td>
-                          <td>Intelligence, Stealth</td>
-                          <td><button class="enter-contest-btns btn btn-sm" name="mindMaze" data-mainSkill="intelligence" data-otherSkill="stealth">Enter</button></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-            </div>
+  <main id="main" class="p-7 flex flex-col gap-3 font-mono">
+    <div class="hero min-h-screen">
+      <div class="hero-content text-center">
+        <div class="max-w-md">
+          <h1 class="text-5xl font-bold">GAME OVER</h1>
+          <p class="py-6">name died</p>
+          <button class="btn btn-primary">Play Again</button>
         </div>
+      </div>
     </div>
+  </main>
 </body>
 
 </html>
