interact with pet by clicking

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
 
                         <div>
                             <p>Health <span id="health-label">100%</span></p>
-                            <progress id="health-bar" class="progress progress-primary" value="1"
+                            <progress id="health-bar" class="progress progress-primary" value="100"
                                 max="100"></progress>
                         </div>
 
@@ -224,6 +224,15 @@
 
             <button id="begin-game" class="btn">BEGIN</button>
         </form>
+
+
+
+
+        <div id="toast" class="toast hidden">
+            <div class="alert alert-info">
+              <span id="toast-text">Pet loves the attention!</span>
+            </div>
+        </div>
 
 
 
