--- a/client/index.html
+++ b/client/index.html
@@ -169,6 +169,16 @@
 
             <div class="col-span-7 md:col-span-3 lg:col-span-2 border border-neutral rounded p-7 ">
                 <h2 class="mb-3 text-lg leading-none">ACHIEVEMENTS</h2>
+
+                <ul id="achievement-container" class="text-sm overflow-y-scroll h-40 md:h-[208px] lg:h-[128px]">
+                    <!-- <li class="border-b py-1 flex gap-1 items-center">
+                        <img src="images/ribbon.png" class="w-7">
+                        <div>
+                            <p class="font-bold">achievement</p>
+                            <p class="text-xs">description</p>
+                        </div>
+                    </li> -->
+                </ul>
             </div>
         </section>
 
@@ -227,7 +237,7 @@
 
 
 
-
+        <!-- TOAST -->
         <div id="toast" class="toast hidden">
             <div class="alert alert-info">
               <span id="toast-text">Pet loves the attention!</span>
