app renders skills from server data

--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
                 <h2 class="mb-3 text-lg leading-none">SKILLS</h2>
 
 
-                <div class="grid grid-cols-1 gap-2 text-xs leading-tight">
+                <div id="skill-bars" class="grid grid-cols-1 gap-2 text-xs leading-tight">
                     <div>
                         <p>Agility <span id="agility-label">0</span></p>
                         <progress id="agility-bar" class="progress progress-secondary w-full" value="0"
