placeholders for achievements

--- a/client/index.html
+++ b/client/index.html
@@ -178,6 +178,12 @@
                             <p class="text-xs">description</p>
                         </div>
                     </li> -->
+
+                    <li id="five-star-feeder-placeholder" class="border-b py-1 text-base-300 text-xs">Feed your pet 5 times to earn an achievement</li>
+                    <li id="contest-conqueror-placeholder" class="border-b py-1 text-base-300 text-xs">Win every contest to earn this achievement</li>
+                    <li id="smarty-pants-placeholder" class="border-b py-1 text-base-300 text-xs">Get a perfect score in animal trivia to earn this achievement</li>
+                    <li id="cash-cow-placeholder" class="border-b py-1 text-base-300 text-xs">Earn $100 to earn this achievement</li>
+                    <li id="skill-master-placeholder" class="border-b py-1 text-base-300 text-xs">Max out every skill to earn this achievement</li>
                 </ul>
             </div>
         </section>
