--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,8 @@
         <!-- DASHBOARD -->
         <section id="dashboard" class="grid grid-cols-7 gap-3">
             <div class="col-span-7 md:col-span-4 lg:col-span-3 border border-neutral rounded p-7">
-                <h2 id="pet-name" class="mb-2 text-lg leading-none">Toby</h2>
-
+                <h2 id="pet-name" class="mb-2 text-lg leading-none"></h2>
+                    
                 <div class="flex gap-2">
                     <img src="images/dog.jpg" id="pet-pic" class="w-1/2 aspect-w-3 aspect-h-2">
 
@@ -50,11 +50,10 @@
                         </div>
 
                         <p>Personality: <span id="pet-personality">Quiet</span></p>
+
                         <p class="text-primary text-base">MONEY: <span id="money-display">100</span></p>
                     </div>
                 </div>
-
-
             </div>
 
             <div class="col-span-7 md:col-span-3 lg:col-span-2 border border-neutral rounded p-7">
@@ -116,6 +115,10 @@
                     <div class="tooltip tooltip-accent" data-tip="Go on an adventure with your pet"><button
                             id="start-adventure-btn" class="btn btn-outline btn-sm w-full">Go on an Adventure</button>
                     </div>
+
+                    <div class="tooltip tooltip-accent" data-tip="Send your pet to bed"><button
+                        id="sleep-btn" class="btn btn-outline btn-sm w-full">Sleep</button>
+                </div>
                 </div>
             </div>
 
