--- a/client/index.html
+++ b/client/index.html
@@ -21,9 +21,10 @@
         <section id="dashboard" class="grid grid-cols-7 gap-3">
             <div class="col-span-7 md:col-span-4 lg:col-span-3 border border-neutral rounded p-7">
                 <h2 id="pet-name" class="mb-2 text-lg leading-none"></h2>
-                    
+
                 <div class="flex gap-2">
-                    <img src="images/dog.jpg" id="pet-pic" class="w-1/2 aspect-w-3 aspect-h-2">
+                    <div class="tooltip tooltip-accent w-1/2 aspect-w-3 aspect-h-2 hover:cursor-pointer"
+                        data-tip="Click to pet your pet!"><img src="images/dog.jpg" id="pet-pic" class=""></div>
 
                     <div class="flex flex-col gap-3 w-1/2 text-xs leading-tight">
                         <div>
@@ -116,9 +117,9 @@
                             id="start-adventure-btn" class="btn btn-outline btn-sm w-full">Go on an Adventure</button>
                     </div>
 
-                    <div class="tooltip tooltip-accent" data-tip="Send your pet to bed"><button
-                        id="sleep-btn" class="btn btn-outline btn-sm w-full">Sleep</button>
-                </div>
+                    <div class="tooltip tooltip-accent" data-tip="Send your pet to bed"><button id="sleep-btn"
+                            class="btn btn-outline btn-sm w-full">Sleep</button>
+                    </div>
                 </div>
             </div>
 
@@ -182,11 +183,16 @@
                         </div>
                     </li> -->
 
-                    <li id="five-star-feeder-placeholder" class="border-b py-1 text-base-300 text-xs">Feed your pet 5 times to earn an achievement</li>
-                    <li id="contest-conqueror-placeholder" class="border-b py-1 text-base-300 text-xs">Win every contest to earn this achievement</li>
-                    <li id="smarty-pants-placeholder" class="border-b py-1 text-base-300 text-xs">Get a perfect score in animal trivia to earn this achievement</li>
-                    <li id="cash-cow-placeholder" class="border-b py-1 text-base-300 text-xs">Earn $100 to earn this achievement</li>
-                    <li id="skill-master-placeholder" class="border-b py-1 text-base-300 text-xs">Max out every skill to earn this achievement</li>
+                    <li id="five-star-feeder-placeholder" class="border-b py-1 text-base-300 text-xs">Feed your pet 5
+                        times to earn an achievement</li>
+                    <li id="contest-conqueror-placeholder" class="border-b py-1 text-base-300 text-xs">Win every contest
+                        to earn this achievement</li>
+                    <li id="smarty-pants-placeholder" class="border-b py-1 text-base-300 text-xs">Get a perfect score in
+                        animal trivia to earn this achievement</li>
+                    <li id="cash-cow-placeholder" class="border-b py-1 text-base-300 text-xs">Earn $100 to earn this
+                        achievement</li>
+                    <li id="skill-master-placeholder" class="border-b py-1 text-base-300 text-xs">Max out every skill to
+                        earn this achievement</li>
                 </ul>
             </div>
         </section>
@@ -249,7 +255,7 @@
         <!-- TOAST -->
         <div id="toast" class="toast hidden">
             <div class="alert alert-info">
-              <span id="toast-text">Pet loves the attention!</span>
+                <span id="toast-text">Pet loves the attention!</span>
             </div>
         </div>
 
@@ -488,14 +494,16 @@
                                         <td>Endurance Marathon</td>
                                         <td>Endurance, Strength</td>
                                         <td><button class="enter-contest-btns btn btn-sm" name="endurance-marathon"
-                                                data-main-skill="endurance" data-other-skill="strength">Enter</button></td>
+                                                data-main-skill="endurance" data-other-skill="strength">Enter</button>
+                                        </td>
                                     </tr>
 
                                     <tr>
                                         <td>Hunting Expedition</td>
                                         <td>Hunting, Intelligence</td>
                                         <td><button class="enter-contest-btns btn btn-sm" name="hunting-expedition"
-                                                data-main-skill="hunting" data-other-skill="intelligence">Enter</button></td>
+                                                data-main-skill="hunting" data-other-skill="intelligence">Enter</button>
+                                        </td>
                                     </tr>
 
 
@@ -504,6 +512,46 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </dialog>
+
+
+
+
+        <!-- ADVENTURE MODAL -->
+        <dialog id="adventure-modal" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <form method="dialog">
+                    <button id="close-adventure-btn"
+                        class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                </form>
+                <h3 id="adventure-title" class="font-bold text-lg">Go on an Adventure</h3>
+
+                <div id="adventure-container">
+                    <div id="choose-starting-point">
+                        <p class="text-neutral text-sm my-4">Choose a starting point</p>
+
+                        <div id="starting-point-btns" class="grid grid-cols-3 gap-5 h-36 mt-5">
+                            <div id="woods-btn"
+                                class="bg-primary text-primary-content flex items-center justify-center transition-all hover:cursor-pointer hover:shadow hover:-translate-y-1"
+                                data-name="woods">
+                                The Woods
+                            </div>
+                            <div id="mountains-btn"
+                                class="bg-secondary text-secondary-content flex items-center justify-center transition-all hover:cursor-pointer hover:shadow hover:-translate-y-1"
+                                data-name="mountains">
+                                The Mountains
+                            </div>
+                            <div id="beach-btn"
+                                class="bg-accent text-accent-content flex items-center justify-center transition-all hover:cursor-pointer hover:shadow hover:-translate-y-1"
+                                data-name="beach">
+                                The Beach
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
         </dialog>
 
