--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
 
                 <div class="flex gap-2">
                     <div class="tooltip tooltip-accent w-1/2 aspect-w-3 aspect-h-2 hover:cursor-pointer"
-                        data-tip="Click to pet your pet!"><img src="images/dog.jpg" id="pet-pic" class=""></div>
+                        data-tip="Click to pet your pet!"><img src="" id="pet-pic" class=""></div>
 
                     <div class="flex flex-col gap-3 w-1/2 text-xs leading-tight">
                         <div>
@@ -211,13 +211,13 @@
                 <div class="flex flex-col md:flex-row gap-6">
                     <label>
                         <input type="radio" class="hidden" name="pet-options" value="cat" required>
-                        <img src="images/cat.jpg" id="cat"
+                        <img src="images/cat/default.png" id="cat"
                             class="w-36 transition-all hover:cursor-pointer hover:shadow hover:-translate-y-1">
                     </label>
 
                     <label>
                         <input type="radio" class="hidden" value="dog" name="pet-options">
-                        <img src="images/dog.jpg" id="dog"
+                        <img src="images/dog/default.png" id="dog"
                             class="w-36 transition-all hover:cursor-pointer hover:shadow hover:-translate-y-1">
                     </label>
 
