history added to server

--- a/client/index.html
+++ b/client/index.html
@@ -253,7 +253,7 @@
 
 
         <!-- TOAST -->
-        <div id="toast" class="toast hidden">
+        <div id="toast" class="toast z-50 hidden">
             <div class="alert alert-info">
                 <span id="toast-text">Pet loves the attention!</span>
             </div>
